Asset Catalogs cannot be saved to/loaded from unicode file paths #93960

Closed
opened 2021-12-11 16:02:02 +01:00 by Serj Yurkevich · 13 comments

System Information
Operating system: Windows-10-10.0.18363-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: -

Short description of error
Can't save catalogs in asset browser

Exact steps for others to reproduce the error
I Create new catalog, this catalog mark with * it mean that catalog has unsaved changes, and i can't save it. When i re-open same file with assets after save blend file, i lost all catalogs. But asset will saved as Unassigned.
I Try some experiment with folders, blend files and asset libraries setings in preferences to understanding what the problem, and as i understand asset browser catalogs not save when i use russian names for folder, try (новый) to reproduse. And after i rename my folder to english, asset browser start work correctly.
image.png

**System Information** Operating system: Windows-10-10.0.18363-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: - **Short description of error** Can't save catalogs in asset browser **Exact steps for others to reproduce the error** I Create new catalog, this catalog mark with * it mean that catalog has unsaved changes, and i can't save it. When i re-open same file with assets after save blend file, i lost all catalogs. But asset will saved as Unassigned. I Try some experiment with folders, blend files and asset libraries setings in preferences to understanding what the problem, and as i understand asset browser catalogs not save when i use russian names for folder, try (новый) to reproduse. And after i rename my folder to english, asset browser start work correctly. ![image.png](https://archive.blender.org/developer/F12730726/image.png)
Author

Added subscriber: @Serj_Coruzyak

Added subscriber: @Serj_Coruzyak
Serj Yurkevich changed title from Can't save catalogs in asset browser for 3.0 release day version to Can't save catalogs in asset browser for 3.0 2021-12-11 17:16:38 +01:00

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed here. Seems like an issue with any Unicode path.

Confirmed here. Seems like an issue with any Unicode path.
Jesse Yurkovich changed title from Can't save catalogs in asset browser for 3.0 to Can't save catalogs in asset browser for 3.0 (with Unicode paths) 2021-12-11 22:29:41 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can't recreate this on Linux, but I'm not surprised since path Unicode handling is quite different on Windows compared to Linux.

Can't recreate this on Linux, but I'm not surprised since path Unicode handling is quite different on Windows compared to Linux.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Marking as bug. Unicode should work.

Marking as bug. Unicode should work.
Member

Added subscriber: @temeddix

Added subscriber: @temeddix
Member

I want to mention that the same problem happens on Korean filepath environments

I want to mention that the same problem happens on Korean filepath environments

Added subscriber: @Svend

Added subscriber: @Svend
Sybren A. Stüvel changed title from Can't save catalogs in asset browser for 3.0 (with Unicode paths) to Asset Catalogs cannot be saved to/loaded from unicode file paths 2021-12-20 14:51:08 +01:00
Sybren A. Stüvel self-assigned this 2021-12-20 14:51:08 +01:00

This issue was referenced by 8cf1994455

This issue was referenced by 8cf19944557452ae7a9c1cb2365d6121f2dfdb4d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93960
No description provided.